crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_10_map_none.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\ntype option 'a = None | Some 'a\nimpl Eq 'a => Eq (option 'a) where\n    eq a b =\n        case (a, b) of\n            (None, None) -> True\n            (Some x, Some y) -> eq x y\n            _ -> False\nmap opt f =\n    case opt of\n        None -> None\n        Some a -> Some (f a)\naddOne n = addInteger n 1\nmain = eq (map None addOne) None\n"
---
--- unoptimized Core
let fromBool#7 : bool -> bool = \value#31 : bool -> value#31 in
let eq#10 : int -> int -> bool = equalsInteger in
let eq#2 : Main.option 'erased -> Main.option 'erased -> bool = \a#5 : Main.option 'erased b#6 : Main.option 'erased -> let match#11 : (Main.option 'erased, Main.option 'erased) = constr 0 a#5 b#6 in
let leaf#17 : @delay bool = delay (fromBool#7 false) in
case@Tag match#11 of
  0 field#18 field#19 -> case@Tag field#18 of
    0 -> case@Tag field#19 of
      0 -> fromBool#7 true
      1 field#20 -> force leaf#17
    1 field#21 -> case@Tag field#19 of
      0 -> force leaf#17
      1 field#22 -> let x#8 : 'erased = field#21 in
      let y#9 : 'erased = field#22 in
      eq#10 x#8 y#9 in
let map#3 : Main.option 'erased -> ('erased -> 'erased) -> Main.option 'erased = \opt#23 : Main.option 'erased (f#24 : 'erased -> 'erased) -> let match#27 : Main.option 'erased = opt#23 in
case@Tag match#27 of
  0 -> constr 0
  1 field#28 -> let a#25 : 'erased = field#28 in
  (\field#26 : 'erased -> constr 1 field#26) (f#24 a#25) in
let fromInt#30 : int -> int = \value#32 : int -> value#32 in
let addOne#4 : int -> int = \n#29 : int -> addInteger n#29 (fromInt#30 1) in
let main#1 : bool = eq#2 (map#3 (constr 0) addOne#4) (constr 0) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_7
    [(lam eq_10
      [(lam eq_2
        [(lam map_3
          [(lam fromInt_30
            [(lam addOne_4
              [(lam main_1 main_1) [[eq_2 [[map_3 (constr 0)] addOne_4]] (constr 0)]])
              (lam n_29 [[(builtin addInteger) n_29] [fromInt_30 (con integer 1)]])])
            (lam value_32 value_32)])
          (lam opt_23
            (lam f_24
              [(lam match_27
                (case
                  match_27
                  (constr 0)
                  (lam field_28
                    [(lam a_25 [(lam field_26 (constr 1 field_26)) [f_24 a_25]]) field_28])))
                opt_23]))])
        (lam a_5
          (lam b_6
            [(lam match_11
              [(lam leaf_17
                (case
                  match_11
                  (lam field_18
                    (lam field_19
                      (case
                        field_18
                        (case field_19 [fromBool_7 (con bool True)] (lam field_20 (force leaf_17)))
                        (lam field_21
                          (case
                            field_19
                            (force leaf_17)
                            (lam field_22 [(lam x_8 [(lam y_9 [[eq_10 x_8] y_9]) field_22]) field_21]))))))))
                (delay [fromBool_7 (con bool False)])])
              (constr 0 a_5 b_6)]))])
      (builtin equalsInteger)])
    (lam value_31 value_31)])
--- optimized Core
true
--- optimized UPLC
(program 1.1.0 (con bool True))
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 928100, memory: 5900
