crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_14_list_creation.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nmain = [subtractInteger 0 2, subtractInteger 0 1, 0]\n"
---
--- unoptimized Core
let fromInt#2 : int -> int = \value#3 : int -> value#3 in
let main#1 : list int = mkCons (subtractInteger (fromInt#2 0) (fromInt#2 2)) (mkCons (subtractInteger (fromInt#2 0) (fromInt#2 1)) (mkCons (fromInt#2 0) (con (list integer) []))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_2
    [(lam main_1 main_1)
      [[(force (builtin mkCons))
        [[(builtin subtractInteger) [fromInt_2 (con integer 0)]]
          [fromInt_2 (con integer 2)]]]
        [[(force (builtin mkCons))
          [[(builtin subtractInteger) [fromInt_2 (con integer 0)]]
            [fromInt_2 (con integer 1)]]]
          [[(force (builtin mkCons)) [fromInt_2 (con integer 0)]] (con (list integer) [])]]]])
    (lam value_3 value_3)])
--- optimized Core
(con (list integer) [-2, -1, 0])
--- optimized UPLC
(program 1.1.0 (con (list integer) [-2, -1, 0]))
--- result
(con (list integer) [-2, -1, 0])
--- logs
[]
--- budget
cpu: 1139602, memory: 4700
