crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_17_take.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nslice bytes start end = sliceByteString start end bytes\ntake bytes n = slice bytes 0 n\nmain = eq (take #\"010203\" 2) #\"0102\"\n"
---
--- unoptimized Core
let eq#2 : bytes -> bytes -> bool = equalsByteString in
let fromInt#5 : int -> int = \value#10 : int -> value#10 in
let slice#8 : bytes -> int -> int -> bytes = \bytes#11 : bytes start#12 : int end#13 : int -> sliceByteString start#12 end#13 bytes#11 in
let take#3 : bytes -> int -> bytes = \bytes#6 : bytes n#7 : int -> slice#8 bytes#6 (fromInt#5 0) n#7 in
let fromBytes#4 : bytes -> bytes = \value#9 : bytes -> value#9 in
let main#1 : bool = eq#2 (take#3 (fromBytes#4 (con bytestring #010203)) (fromInt#5 2)) (fromBytes#4 (con bytestring #0102)) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam eq_2
    [(lam fromInt_5
      [(lam slice_8
        [(lam take_3
          [(lam fromBytes_4
            [(lam main_1 main_1)
              [[eq_2
                [[take_3 [fromBytes_4 (con bytestring #010203)]] [fromInt_5 (con integer 2)]]]
                [fromBytes_4 (con bytestring #0102)]]])
            (lam value_9 value_9)])
          (lam bytes_6 (lam n_7 [[[slice_8 bytes_6] [fromInt_5 (con integer 0)]] n_7]))])
        (lam bytes_11
          (lam start_12
            (lam end_13 [[[(builtin sliceByteString) start_12] end_13] bytes_11])))])
      (lam value_10 value_10)])
    (builtin equalsByteString)])
--- optimized Core
equalsByteString (con bytestring #0102) (con bytestring #0102)
--- optimized UPLC
(program 1.1.0
  [[(builtin equalsByteString) (con bytestring #0102)] (con bytestring #0102)])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 946104, memory: 5705
